--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
  
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
+  http:
+  provider:
 
 dev_dependencies:
   flutter_test:
